feat: Add dagster-app README.md file
This commit adds the README.md file for the dagster-app. The README provides important information about the project and its purpose. This will help users understand the project and its functionalities.

Co-authored-by: [Author Name]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,4 +36,4 @@ services:
       - 3000:3000
     volumes:
       - ./dagster-app/app:/opt/dagster/app
-      - ./dagster-app/home/dagster.yaml:/opt/dagster/dagster_home/dagster.yaml
+      # - ./dagster-app/home/dagster.yaml:/opt/dagster/dagster_home/dagster.yaml
